# imbd

./: .gitignore  DATA_WAREHOUSE_REPORT.md  imdb_ddl.sql  imdb_ddl_postgres.sql  loader.py  main.py  pyproject.toml  report.md  requirements.txt  transformer.py  uml_participartions.txt
gold/: particiapations_analysis.ipynb
notebooks/bronze/: data_validation.ipynb  transformations.ipynb  write_to_remote_db.ipynb
notebooks/silver/: transformations.ipynb
src/imdb_utils/: utils.py
